2001-08-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/parse.c (ParseButton):
	fixed handling of parentheses in button actions

2001-08-15  Mikhael Goikhman  <migo@homemail.com>

	* FvwmScript/Scripts/FvwmScript-Setup95.in:
	s/gnome-wm/gnome-hints/

2001-08-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTheme/FvwmTheme:
	fixed a typo

2001-08-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/x.c (create_manager_window):
	(init_display):
	(X_init_manager):
	* FvwmIconMan/globals.c (print_managers):
	(init_globals):
	* FvwmIconMan/fvwm.c (win_in_viewport):
	* FvwmIconMan/FvwmIconMan.h:
	* FvwmIconMan/readconfig.c (read_in_resources):
	added "screen" resolution option

	* FvwmIdent/FvwmIdent.c (list_end):
	removed unused code

	* FvwmWinList/FvwmWinList.c (main):
	* FvwmButtons/FvwmButtons.c:
	* FvwmIconMan/FvwmIconMan.c (main):
	* FvwmPager/FvwmPager.c:
	allow both, "Fvwm... transient" and "Fvwm... -transient"

	* FvwmPager/x_pager.c (initialize_pager):
	Fixed placement of transient pager

	* FvwmWinList/FvwmWinList.c (ParseConfigLine):
	(main):
	(StartMeUp_I):
	(StartMeUp_II):
	(MakeMeWindow):
	Added Xinerama support

2001-08-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmForm/ReadXServer.c (ReadXServer):
	* FvwmForm/FvwmForm.c (OpenWindows):
	fixed FvwmForm windows with GrabServer getting buried under other
	windows making the desktop unusable; fixes bug #566

	* FvwmPager/FvwmPager.1 (Note):
	added a note about the FvwmPagerSloppyFocus vs Sloppy/MouseFocus
	page switching/focus problem

2001-08-07  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c:
	* FvwmTaskBar/FvwmTaskBar.1:
	* FvwmWinList/FvwmWinList.c:
	* FvwmWinList/FvwmWinList.1:
	* FvwmIconBox/FvwmIconBox.c:
	* FvwmIconBox/FvwmIconBox.c:
	Added alias support to be able to get one module by Xinerama screens

2001-08-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmScroll/GrabWindow.c:
	* FvwmScroll/FvwmScroll.c:<
	reindented

	* FvwmRearrange/FvwmRearrange.c (main):