@@ -1,3 +1,8 @@
+2001-08-23  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmWharf/FvwmWharf.c:
+	aapplied a Xinerama patch from Dimitry
+
 2001-08-16  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmButtons/parse.c (ParseButton):
